--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "coccuscc/vdb-sdk-php",
     "description": "腾讯云vdb php sdk",
-    "type": "composer-plugin",
+    "type": "library",
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
