--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
-            "Coccuscc\\VdbSdkPhp\\": "src/"
+            "Coccuscc\\Vdb\\": "src/"
         }
     },
     "authors": [
